fix: change negative color to be more visible

--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -29,6 +29,7 @@ $secondary: #424549;
 $accent: #747f8d;
 
 $positive: #21ba45;
-$negative: #e00025;
+$negative: #f8788d;
+
 $info: #31ccec;
 $warning: #f2c037;
